src/snapshots/shinbukan_ics__tests__calendar_fixtures@2024-12.html-2.snap
---
source: src/main.rs
expression: result.events_as_ics()
input_file: src/fixtures/2024-12.html
---
BEGIN:VEVENT
UID:7131923015938722452@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20241208T000000Z
DTEND:20241208T080000Z
SUMMARY:鳴尾浜 柔道場 本稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202412.html
END:VEVENT
BEGIN:VEVENT
UID:7545771271724948079@shinbukan-ics
DTSTAMP:20240430T153649Z
DTSTART:20241222T040000Z
DTEND:20241222T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2024/202412.html
END:VEVENT
