src/snapshots/shinbukan_ics__tests__calendar_fixtures@2024-12.html.snap
---
source: src/main.rs
expression: result
input_file: src/fixtures/2024-12.html
---
MonthResult {
    year: 2024,
    month: 12,
    events: [
        Timed {
            day: 8,
            from: Time {
                hours: 9,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "鳴尾浜 柔道場 本稽古",
        },
        Timed {
            day: 22,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "鳴尾浜 柔道場/自主稽古",
        },
    ],
    errors: [],
}
