src/snapshots/shinbukan_ics__tests__calendar_fixtures@2025-01.html-2.snap
---
source: src/main.rs
expression: result.events_as_ics()
input_file: src/fixtures/2025-01.html
---
BEGIN:VEVENT
UID:9027398495651912590@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20250105T040000Z
DTEND:20250105T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2025/202501.html
END:VEVENT
BEGIN:VEVENT
UID:5436945438172175027@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20250112T040000Z
DTEND:20250112T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2025/202501.html
END:VEVENT
BEGIN:VEVENT
UID:5845809852607321872@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20250119T000000Z
DTEND:20250119T080000Z
SUMMARY:鳴尾浜 柔道場 本稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2025/202501.html
END:VEVENT
