src/snapshots/shinbukan_ics__tests__calendar_fixtures@2025-02.html-2.snap
---
source: src/main.rs
expression: result.events_as_ics()
input_file: src/fixtures/2025-02.html
---
BEGIN:VEVENT
UID:6712710664125152988@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20250209T040000Z
DTEND:20250209T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2025/202502.html
END:VEVENT
BEGIN:VEVENT
UID:3270252548869658857@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20250216T000000Z
DTEND:20250216T080000Z
SUMMARY:鳴尾浜 柔道場 本稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2025/202502.html
END:VEVENT
BEGIN:VEVENT
UID:8282280308099250100@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20250223T040000Z
DTEND:20250223T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2025/202502.html
END:VEVENT
