src/snapshots/shinbukan_ics__tests__calendar_fixtures@2025-02.html.snap
---
source: src/main.rs
expression: result
input_file: src/fixtures/2025-02.html
---
MonthResult {
    year: 2025,
    month: 2,
    events: [
        Timed {
            day: 9,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "鳴尾浜 柔道場/自主稽古",
        },
        Timed {
            day: 16,
            from: Time {
                hours: 9,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "鳴尾浜 柔道場 本稽古",
        },
        Timed {
            day: 23,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "鳴尾浜 柔道場/自主稽古",
        },
    ],
    errors: [],
}
