src/snapshots/shinbukan_ics__tests__calendar_fixtures@2025-03.html.snap
---
source: src/main.rs
expression: result
input_file: src/fixtures/2025-03.html
---
MonthResult {
    year: 2025,
    month: 3,
    events: [
        Timed {
            day: 2,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "鳴尾浜 柔道場/自主稽古",
        },
        Timed {
            day: 16,
            from: Time {
                hours: 9,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "鳴尾浜 柔道場 本稽古",
        },
        Timed {
            day: 30,
            from: Time {
                hours: 13,
                minutes: 0,
            },
            to: Time {
                hours: 17,
                minutes: 0,
            },
            text: "鳴尾浜 柔道場/自主稽古",
        },
    ],
    errors: [],
}
