src/snapshots/shinbukan_ics__tests__calendar_fixtures@2025-04.html-2.snap
---
source: src/main.rs
expression: result.events_as_ics()
input_file: src/fixtures/2025-04.html
---
BEGIN:VEVENT
UID:1968633782112797207@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20250406T040000Z
DTEND:20250406T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2025/202504.html
END:VEVENT
BEGIN:VEVENT
UID:9604201761401599901@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20250413T000000Z
DTEND:20250413T080000Z
SUMMARY:鳴尾浜 柔道場 本稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2025/202504.html
END:VEVENT
BEGIN:VEVENT
UID:8626147013184437986@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20250420T040000Z
DTEND:20250420T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2025/202504.html
END:VEVENT
BEGIN:VEVENT
UID:2266895214022598528@shinbukan-ics
DTSTAMP:20000101T000000Z
DTSTART:20250427T040000Z
DTEND:20250427T080000Z
SUMMARY:鳴尾浜 柔道場/自主稽古
URL:http://brionac.s17.xrea.com/schedule/homepage/homepage/calendar/2025/202504.html
END:VEVENT
